src/parser/scheduleParser.js
// Generated from schedule.g4 by ANTLR 4.9.3
// jshint ignore: start
import antlr4 from 'antlr4';
import scheduleListener from './scheduleListener.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class scheduleParser extends antlr4.Parser {

    static grammarFileName = "schedule.g4";
    static literalNames = [ null, "';'", "','", "'('", "')'", "'-'", null, 
                            "'id'", "'add'", "'del'", "'delall'", "'rename'", 
                            "'ajust'", "'to'" ];
    static symbolicNames = [ null, null, null, null, null, null, "WS", "ID", 
                             "ADD", "DEL", "DELALL", "RENAME", "AJUST", 
                             "TO", "YEAR", "IDENTIFIER", "WEEKDAY", "NAME", 
                             "DATE", "TIME" ];
    static ruleNames = [ "program", "addtasks", "deltasks", "delalltasks", 
                         "renametask", "ajusttask", "identifiers", "tasks", 
                         "task", "daterange", "names", "dates", "timeranges", 
                         "timerange", "weekdays" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = scheduleParser.ruleNames;
        this.literalNames = scheduleParser.literalNames;
        this.symbolicNames = scheduleParser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, scheduleParser.RULE_program);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 37;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << scheduleParser.ADD) | (1 << scheduleParser.DEL) | (1 << scheduleParser.DELALL) | (1 << scheduleParser.RENAME) | (1 << scheduleParser.AJUST))) !== 0)) {
	            this.state = 35;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case scheduleParser.ADD:
	                this.state = 30;
	                this.addtasks();
	                break;
	            case scheduleParser.DEL:
	                this.state = 31;
	                this.deltasks();
	                break;
	            case scheduleParser.DELALL:
	                this.state = 32;
	                this.delalltasks();
	                break;
	            case scheduleParser.RENAME:
	                this.state = 33;
	                this.renametask();
	                break;
	            case scheduleParser.AJUST:
	                this.state = 34;
	                this.ajusttask();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 39;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	addtasks() {
	    let localctx = new AddtasksContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, scheduleParser.RULE_addtasks);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 40;
	        this.match(scheduleParser.ADD);
	        this.state = 41;
	        this.tasks();
	        this.state = 42;
	        this.match(scheduleParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	deltasks() {
	    let localctx = new DeltasksContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, scheduleParser.RULE_deltasks);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 44;
	        this.match(scheduleParser.DEL);
	        this.state = 48;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case scheduleParser.T__2:
	        case scheduleParser.YEAR:
	            this.state = 45;
	            this.tasks();
	            break;
	        case scheduleParser.ID:
	            this.state = 46;
	            this.match(scheduleParser.ID);
	            this.state = 47;
	            this.identifiers();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 50;
	        this.match(scheduleParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	delalltasks() {
	    let localctx = new DelalltasksContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, scheduleParser.RULE_delalltasks);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 52;
	        this.match(scheduleParser.DELALL);
	        this.state = 64;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 53;
	            this.match(scheduleParser.YEAR);
	            this.state = 54;
	            this.dates();
	            break;

	        case 2:
	            this.state = 55;
	            this.daterange();
	            break;

	        case 3:
	            this.state = 57;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===scheduleParser.T__2) {
	                this.state = 56;
	                this.daterange();
	            }

	            this.state = 59;
	            this.names();
	            break;

	        case 4:
	            this.state = 61;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===scheduleParser.T__2) {
	                this.state = 60;
	                this.daterange();
	            }

	            this.state = 63;
	            this.timerange();
	            break;

	        }
	        this.state = 66;
	        this.match(scheduleParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	renametask() {
	    let localctx = new RenametaskContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, scheduleParser.RULE_renametask);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 68;
	        this.match(scheduleParser.RENAME);
	        this.state = 72;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case scheduleParser.NAME:
	            this.state = 69;
	            this.match(scheduleParser.NAME);
	            break;
	        case scheduleParser.ID:
	            this.state = 70;
	            this.match(scheduleParser.ID);
	            this.state = 71;
	            this.match(scheduleParser.IDENTIFIER);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 74;
	        this.match(scheduleParser.NAME);
	        this.state = 75;
	        this.match(scheduleParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ajusttask() {
	    let localctx = new AjusttaskContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, scheduleParser.RULE_ajusttask);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 77;
	        this.match(scheduleParser.AJUST);
	        this.state = 81;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case scheduleParser.T__2:
	        case scheduleParser.YEAR:
	            this.state = 78;
	            this.task();
	            break;
	        case scheduleParser.ID:
	            this.state = 79;
	            this.match(scheduleParser.ID);
	            this.state = 80;
	            this.match(scheduleParser.IDENTIFIER);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 83;
	        this.match(scheduleParser.TO);
	        this.state = 85;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===scheduleParser.YEAR) {
	            this.state = 84;
	            this.match(scheduleParser.YEAR);
	        }

	        this.state = 88;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===scheduleParser.DATE) {
	            this.state = 87;
	            this.match(scheduleParser.DATE);
	        }

	        this.state = 90;
	        this.timerange();
	        this.state = 91;
	        this.match(scheduleParser.T__0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	identifiers() {
	    let localctx = new IdentifiersContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, scheduleParser.RULE_identifiers);
	    try {
	        this.state = 97;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,10,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 93;
	            this.match(scheduleParser.IDENTIFIER);
	            this.state = 94;
	            this.match(scheduleParser.T__1);
	            this.state = 95;
	            this.identifiers();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 96;
	            this.match(scheduleParser.IDENTIFIER);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tasks() {
	    let localctx = new TasksContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, scheduleParser.RULE_tasks);
	    try {
	        this.state = 104;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 99;
	            this.task();
	            this.state = 100;
	            this.match(scheduleParser.T__0);
	            this.state = 101;
	            this.tasks();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 103;
	            this.task();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	task() {
	    let localctx = new TaskContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, scheduleParser.RULE_task);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 112;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case scheduleParser.YEAR:
	            this.state = 106;
	            this.match(scheduleParser.YEAR);
	            this.state = 107;
	            this.dates();
	            break;
	        case scheduleParser.T__2:
	            this.state = 108;
	            this.daterange();
	            this.state = 110;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===scheduleParser.WEEKDAY) {
	                this.state = 109;
	                this.weekdays();
	            }

	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 114;
	        this.timeranges();
	        this.state = 115;
	        this.match(scheduleParser.NAME);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	daterange() {
	    let localctx = new DaterangeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, scheduleParser.RULE_daterange);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 117;
	        this.match(scheduleParser.T__2);
	        this.state = 118;
	        this.match(scheduleParser.YEAR);
	        this.state = 119;
	        this.match(scheduleParser.DATE);
	        this.state = 120;
	        this.match(scheduleParser.T__1);
	        this.state = 121;
	        this.match(scheduleParser.YEAR);
	        this.state = 122;
	        this.match(scheduleParser.DATE);
	        this.state = 123;
	        this.match(scheduleParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	names() {
	    let localctx = new NamesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, scheduleParser.RULE_names);
	    try {
	        this.state = 129;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,14,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 125;
	            this.match(scheduleParser.NAME);
	            this.state = 126;
	            this.match(scheduleParser.T__1);
	            this.state = 127;
	            this.names();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 128;
	            this.match(scheduleParser.NAME);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	dates() {
	    let localctx = new DatesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, scheduleParser.RULE_dates);
	    try {
	        this.state = 135;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,15,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 131;
	            this.match(scheduleParser.DATE);
	            this.state = 132;
	            this.match(scheduleParser.T__1);
	            this.state = 133;
	            this.dates();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 134;
	            this.match(scheduleParser.DATE);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	timeranges() {
	    let localctx = new TimerangesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, scheduleParser.RULE_timeranges);
	    try {
	        this.state = 142;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,16,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 137;
	            this.timerange();
	            this.state = 138;
	            this.match(scheduleParser.T__1);
	            this.state = 139;
	            this.timeranges();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 141;
	            this.timerange();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	timerange() {
	    let localctx = new TimerangeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, scheduleParser.RULE_timerange);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 144;
	        this.match(scheduleParser.TIME);
	        this.state = 145;
	        this.match(scheduleParser.T__4);
	        this.state = 146;
	        this.match(scheduleParser.TIME);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	weekdays() {
	    let localctx = new WeekdaysContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, scheduleParser.RULE_weekdays);
	    try {
	        this.state = 152;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,17,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 148;
	            this.match(scheduleParser.WEEKDAY);
	            this.state = 149;
	            this.match(scheduleParser.T__1);
	            this.state = 150;
	            this.weekdays();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 151;
	            this.match(scheduleParser.WEEKDAY);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

scheduleParser.EOF = antlr4.Token.EOF;
scheduleParser.T__0 = 1;
scheduleParser.T__1 = 2;
scheduleParser.T__2 = 3;
scheduleParser.T__3 = 4;
scheduleParser.T__4 = 5;
scheduleParser.WS = 6;
scheduleParser.ID = 7;
scheduleParser.ADD = 8;
scheduleParser.DEL = 9;
scheduleParser.DELALL = 10;
scheduleParser.RENAME = 11;
scheduleParser.AJUST = 12;
scheduleParser.TO = 13;
scheduleParser.YEAR = 14;
scheduleParser.IDENTIFIER = 15;
scheduleParser.WEEKDAY = 16;
scheduleParser.NAME = 17;
scheduleParser.DATE = 18;
scheduleParser.TIME = 19;

scheduleParser.RULE_program = 0;
scheduleParser.RULE_addtasks = 1;
scheduleParser.RULE_deltasks = 2;
scheduleParser.RULE_delalltasks = 3;
scheduleParser.RULE_renametask = 4;
scheduleParser.RULE_ajusttask = 5;
scheduleParser.RULE_identifiers = 6;
scheduleParser.RULE_tasks = 7;
scheduleParser.RULE_task = 8;
scheduleParser.RULE_daterange = 9;
scheduleParser.RULE_names = 10;
scheduleParser.RULE_dates = 11;
scheduleParser.RULE_timeranges = 12;
scheduleParser.RULE_timerange = 13;
scheduleParser.RULE_weekdays = 14;

class ProgramContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = scheduleParser.RULE_program;
    }

	addtasks = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(AddtasksContext);
	    } else {
	        return this.getTypedRuleContext(AddtasksContext,i);
	    }
	};

	deltasks = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(DeltasksContext);
	    } else {
	        return this.getTypedRuleContext(DeltasksContext,i);
	    }
	};

	delalltasks = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(DelalltasksContext);
	    } else {
	        return this.getTypedRuleContext(DelalltasksContext,i);
	    }
	};

	renametask = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(RenametaskContext);
	    } else {
	        return this.getTypedRuleContext(RenametaskContext,i);
	    }
	};

	ajusttask = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(AjusttaskContext);
	    } else {
	        return this.getTypedRuleContext(AjusttaskContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.enterProgram(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.exitProgram(this);
		}
	}


}



class AddtasksContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = scheduleParser.RULE_addtasks;
    }

	ADD() {
	    return this.getToken(scheduleParser.ADD, 0);
	};

	tasks() {
	    return this.getTypedRuleContext(TasksContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.enterAddtasks(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.exitAddtasks(this);
		}
	}


}



class DeltasksContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = scheduleParser.RULE_deltasks;
    }

	DEL() {
	    return this.getToken(scheduleParser.DEL, 0);
	};

	tasks() {
	    return this.getTypedRuleContext(TasksContext,0);
	};

	ID() {
	    return this.getToken(scheduleParser.ID, 0);
	};

	identifiers() {
	    return this.getTypedRuleContext(IdentifiersContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.enterDeltasks(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.exitDeltasks(this);
		}
	}


}



class DelalltasksContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = scheduleParser.RULE_delalltasks;
    }

	DELALL() {
	    return this.getToken(scheduleParser.DELALL, 0);
	};

	YEAR() {
	    return this.getToken(scheduleParser.YEAR, 0);
	};

	dates() {
	    return this.getTypedRuleContext(DatesContext,0);
	};

	daterange() {
	    return this.getTypedRuleContext(DaterangeContext,0);
	};

	names() {
	    return this.getTypedRuleContext(NamesContext,0);
	};

	timerange() {
	    return this.getTypedRuleContext(TimerangeContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.enterDelalltasks(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.exitDelalltasks(this);
		}
	}


}



class RenametaskContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = scheduleParser.RULE_renametask;
    }

	RENAME() {
	    return this.getToken(scheduleParser.RENAME, 0);
	};

	NAME = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(scheduleParser.NAME);
	    } else {
	        return this.getToken(scheduleParser.NAME, i);
	    }
	};


	ID() {
	    return this.getToken(scheduleParser.ID, 0);
	};

	IDENTIFIER() {
	    return this.getToken(scheduleParser.IDENTIFIER, 0);
	};

	enterRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.enterRenametask(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.exitRenametask(this);
		}
	}


}



class AjusttaskContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = scheduleParser.RULE_ajusttask;
    }

	AJUST() {
	    return this.getToken(scheduleParser.AJUST, 0);
	};

	TO() {
	    return this.getToken(scheduleParser.TO, 0);
	};

	timerange() {
	    return this.getTypedRuleContext(TimerangeContext,0);
	};

	task() {
	    return this.getTypedRuleContext(TaskContext,0);
	};

	ID() {
	    return this.getToken(scheduleParser.ID, 0);
	};

	IDENTIFIER() {
	    return this.getToken(scheduleParser.IDENTIFIER, 0);
	};

	YEAR() {
	    return this.getToken(scheduleParser.YEAR, 0);
	};

	DATE() {
	    return this.getToken(scheduleParser.DATE, 0);
	};

	enterRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.enterAjusttask(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.exitAjusttask(this);
		}
	}


}



class IdentifiersContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = scheduleParser.RULE_identifiers;
    }

	IDENTIFIER() {
	    return this.getToken(scheduleParser.IDENTIFIER, 0);
	};

	identifiers() {
	    return this.getTypedRuleContext(IdentifiersContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.enterIdentifiers(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.exitIdentifiers(this);
		}
	}


}



class TasksContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = scheduleParser.RULE_tasks;
    }

	task() {
	    return this.getTypedRuleContext(TaskContext,0);
	};

	tasks() {
	    return this.getTypedRuleContext(TasksContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.enterTasks(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.exitTasks(this);
		}
	}


}



class TaskContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = scheduleParser.RULE_task;
    }

	timeranges() {
	    return this.getTypedRuleContext(TimerangesContext,0);
	};

	NAME() {
	    return this.getToken(scheduleParser.NAME, 0);
	};

	YEAR() {
	    return this.getToken(scheduleParser.YEAR, 0);
	};

	dates() {
	    return this.getTypedRuleContext(DatesContext,0);
	};

	daterange() {
	    return this.getTypedRuleContext(DaterangeContext,0);
	};

	weekdays() {
	    return this.getTypedRuleContext(WeekdaysContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.enterTask(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.exitTask(this);
		}
	}


}



class DaterangeContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = scheduleParser.RULE_daterange;
    }

	YEAR = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(scheduleParser.YEAR);
	    } else {
	        return this.getToken(scheduleParser.YEAR, i);
	    }
	};


	DATE = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(scheduleParser.DATE);
	    } else {
	        return this.getToken(scheduleParser.DATE, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.enterDaterange(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.exitDaterange(this);
		}
	}


}



class NamesContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = scheduleParser.RULE_names;
    }

	NAME() {
	    return this.getToken(scheduleParser.NAME, 0);
	};

	names() {
	    return this.getTypedRuleContext(NamesContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.enterNames(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof scheduleListener ) {
	        listener.exitNames(this);
		}
	}


}



class DatesContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = scheduleParser.RULE_dates;
    }

	DATE() {
	    return this.getToken(scheduleParser.DATE, 0);
	};
